# symboldb

./: .gitignore  CMakeLists.txt  CODING_STYLE  Makefile  README  TODO  backtrace.cpp  base16.cpp  base16.hpp  checksum.cpp  checksum.hpp  cpio_reader.cpp  cpio_reader.hpp  curl_exception.cpp  curl_exception.hpp  curl_exception_dump.cpp  curl_fetch_result.cpp  curl_fetch_result.hpp  curl_handle.cpp  curl_handle.hpp  database.cpp  database.hpp  database_elf_closure.cpp  database_elf_closure.hpp  database_exception.cpp  dir_handle.cpp  dir_handle.hpp  download.cpp  download.hpp  elf_exception.cpp  elf_exception.hpp  elf_image.cpp  elf_image.hpp  elf_symbol.cpp  elf_symbol.hpp  elf_symbol_definition.cpp  elf_symbol_definition.hpp  elf_symbol_reference.cpp  elf_symbol_reference.hpp  endian.hpp  (+131 more)
doc/: symboldb.xml
doc/examples/: expat.txt  getenv.txt  library-symbol-collisions.txt  openssl.txt  rpm-macros.txt  rpm-scripts.txt  stat-32bit.txt  suid-whitelist.txt  writable-and-executable.txt
include/cxxll/: asdl.hpp  backtrace.hpp  bad_string_index.hpp  base16.hpp  bounded_ordered_queue.hpp  char_cast.hpp  checksum.hpp  cond.hpp  const_stringref.hpp  cpio_reader.hpp  curl_exception.hpp  curl_exception_dump.hpp  curl_fetch_result.hpp  curl_handle.hpp  dir_handle.hpp  elf_exception.hpp  elf_image.hpp  elf_symbol.hpp  elf_symbol_definition.hpp  elf_symbol_reference.hpp  endian.hpp  eof_exception.hpp  exception.hpp  expat_handle.hpp  expat_minidom.hpp  expat_source.hpp  fd_handle.hpp  fd_sink.hpp  fd_source.hpp  file_cache.hpp  file_handle.hpp  gunzip_source.hpp  hash.hpp  java_class.hpp  looks_like_xml.hpp  malloc_handle.hpp  maven_url.hpp  memory_range_source.hpp  mutex.hpp  os.hpp  (+48 more)
include/symboldb/: database.hpp  download.hpp  download_repo.hpp  expire.hpp  get_file.hpp  options.hpp  repomd.hpp  rpm_load.hpp  show_source_packages.hpp  update_elf_closure.hpp
lib/cxxll/: backtrace.cpp  bad_string_index.cpp  base16.cpp  checksum.cpp  cond.cpp  const_stringref.cpp  cpio_reader.cpp  curl_exception.cpp  curl_exception_dump.cpp  curl_fetch_result.cpp  curl_handle.cpp  dir_handle.cpp  elf_exception.cpp  elf_image.cpp  elf_symbol.cpp  elf_symbol_definition.cpp  elf_symbol_reference.cpp  eof_exception.cpp  exception.cpp  expat_handle.cpp  expat_minidom.cpp  expat_source.cpp  fd_handle.cpp  fd_sink.cpp  fd_source.cpp  file_cache.cpp  file_handle.cpp  gunzip_source.cpp  hash.cpp  java_class.cpp  maven_url.cpp  memory_range_source.cpp  mutex.cpp  os.cpp  os_current_directory.cpp  os_error_string.cpp  os_exception.cpp  os_exception_defaults.cpp  os_exception_function.cpp  os_readlink.cpp  (+44 more)
lib/cxxll/asdl/: cardinality.cpp  constructor.cpp  declarator.cpp  definition.cpp  field.cpp  identifier.cpp
lib/cxxll/os/: current_directory.cpp  error_string.cpp  home_directory.cpp  is_directory.cpp  is_executable.cpp  make_directory_hierarchy.cpp  make_temporary_directory.cpp  path_exists.cpp  readlink.cpp  realpath.cpp  remove_directory_tree.cpp  temporary_directory_path.cpp  ticks.cpp
lib/cxxll/raise/: bad_alloc.cpp  logic.cpp  logic_string.cpp  runtime.cpp  runtime_string.cpp
lib/symboldb/: database.cpp  download.cpp  download_repo.cpp  download_source.cpp  expire.cpp  get_file.cpp  options.cpp  repomd.cpp  repomd_primary.cpp  repomd_primary_xml.cpp  rpm_load.cpp  show_source_packages.cpp  update_elf_closure.cpp
src/: pgtestshell.cpp  symboldb.cpp  tosrpm.cpp
test/: run-examples.sh  runtests.cpp  test-asdl.cpp  test-base16.cpp  test-bounded_ordered_queue.cpp  test-const_stringref.cpp  test-dir_handle.cpp  test-download.cpp  test-endian.cpp  test-expat_minidom.cpp  test-expat_source.cpp  test-fd_handle.cpp  test-fd_sink.cpp  test-fd_source.cpp  test-file_cache.cpp  test-file_handle.cpp  test-gunzip_source.cpp  test-java_class.cpp  test-looks_like_xml.cpp  test-maven_url.cpp  test-os.cpp  test-os_exception.cpp  test-pg_encode_array.cpp  test-pg_split_statement.cpp  test-pg_testdb.cpp  test-python_analyzer.cpp  test-python_imports.cpp  test-read_file.cpp  test-read_lines.cpp  test-regex_handle.cpp  test-repomd.cpp  test-rpm_load.cpp  test-rpm_parser.cpp  test-rpm_parser_state.cpp  test-string_source.cpp  test-string_support.cpp  test-subprocess.cpp  test-symboldb-integration.cpp  test-symboldb-integration.sh  test-task.cpp  (+8 more)
test/data/: JavaClass.java  JavaClass.sh  analysis.py  analysis3.py  cronie-1.4.10-7.fc19.src.filelist  cronie-1.4.10-7.fc19.src.rpm  cronie-1.4.10-7.fc19.x86_64.filelist  cronie-1.4.10-7.fc19.x86_64.rpm  file_handle_getline.txt  firewalld-0.2.12-5.fc18.noarch.filelist  firewalld-0.2.12-5.fc18.noarch.rpm  firewalld-0.2.12-5.fc18.src.filelist  firewalld-0.2.12-5.fc18.src.rpm  imports.py  imports3.py  kdenetwork-4.11.2-1.fc19.src.filelist  kdenetwork-4.11.2-1.fc19.src.rpm  kdenetwork-common-4.11.2-1.fc19.noarch.rpm  kphotobymail-0.4.1-11.fc18.noarch.filelist  kphotobymail-0.4.1-11.fc18.noarch.rpm  kphotobymail-0.4.1-11.fc18.src.filelist  kphotobymail-0.4.1-11.fc18.src.rpm  objectweb-asm4-4.1-2.fc18.noarch.filelist  objectweb-asm4-4.1-2.fc18.noarch.rpm  objectweb-asm4-4.1-2.fc18.src.filelist  objectweb-asm4-4.1-2.fc18.src.rpm  openbios-1.0.svn1063-1.fc18.noarch.filelist  openbios-1.0.svn1063-1.fc18.noarch.rpm  openbios-1.0.svn1063-1.fc18.src.filelist  openbios-1.0.svn1063-1.fc18.src.rpm  primary.xml  rpm-dependencies.csv  rpm-dependencies.sh  rpm-scripts.csv  rpm-to-filelist.sh  rpm-trigger-conditions.csv  rpm-trigger-scripts.csv  rsh-0.17-72.fc19.src.filelist  rsh-0.17-72.fc19.src.rpm  rsh-0.17-72.fc19.x86_64.filelist  (+33 more)
test/data/maven/: JPP-commons-net.pom  JPP-geronimo-annotation.pom  JPP-woodstox-core-lgpl.pom  malformed-pom-bsh.xml
